# zot-tui

./: .gitignore  .zot-tui.py.swp  .zot-tui.py.un~  README.md  TODO.md  pyproject.toml  zot-tui.py
.github/workflows/: ci.yml  publish.yml
.specstory/history/: 2025-08-31_01-46Z-improving-zotero-tui-script-with-docstrings.md
src/zotero_tui/: __init__.py  actions.py  cli.py  config.py  db.py  fzf_ui.py  utils.py
tests/: test_db_paths.py  test_utils.py
