[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "zotero-tui"
version = "0.1.0"
description = "A minimal fzf-powered TUI for browsing Zotero collections and opening PDFs"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Will", email = "" }]
keywords = ["zotero", "tui", "fzf", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Topic :: Utilities",
]
dependencies = [
  "pyfzf>=0.3.1",
  "typer>=0.12.3",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "ruff>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/yourname/zotero-tui"
Repository = "https://github.com/yourname/zotero-tui"

[project.scripts]
zotero-tui = "zotero_tui.cli:main"
zotero-tui-preview = "zotero_tui.cli:preview"

[tool.hatch.build]
packages = ["src/zotero_tui"]
